manifests/apps/raspi5/home-assistant/home-assistant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
spec:
  type: ClusterIP
  ports:
  - port: 8123
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/instance: home-assistant
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      hostNetwork: true
      containers:
        - name: home-assistant
          image: "ghcr.io/home-assistant/home-assistant:stable"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: dbus
              mountPath: /run/dbus
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 10
            periodSeconds: 10
          securityContext:
            privileged: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: dbus
          hostPath:
            path: /run/dbus
            type: Directory
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-desec
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd,kube-system-hsts-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - "home-assistant.bigli.io"
      secretName: "home-assistant-tls"
  rules:
    - host: "home-assistant.bigli.io"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
